--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,8 @@ android {
 }
 
 dependencies {
-
+    implementation "androidx.fragment:fragment-ktx:1.3.6"
+    implementation "androidx.core:core-ktx:1.7.0"
     implementation("com.google.android.material:material:1.3.0-alpha01")
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
